--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+  <meta name="google-site-verification" content="nzZVzL8srOd5xC4CSnwIX5STIdbJd13cpaad_b-FelA" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WC-Wagen Marty – Vermietung im Zürcher Oberland</title>
@@ -85,3 +86,4 @@
   </footer>
 </body>
 </html>
+
