--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WC-Wagen Marty – Vermietung im Zürcher Oberland</title>
+  <meta name="description" content="Mobiler WC-Wagen zur Vermietung für Events, Feste und diverse Anlässe im Zürcher Oberland. Kontaktieren Sie Jörg Marty für flexible Lösungen.">
+  <meta name="keywords" content="WC-Wagen, Vermietung, mobile Toilette, Hütten, Marty, Event, WC, Zürich, Schweiz">
+  <meta name="author" content="Jörg Marty">
   <style>
     body {
       margin: 0;
@@ -86,4 +89,5 @@
   </footer>
 </body>
 </html>
+
 
