--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
   <meta name="google-site-verification" content="nzZVzL8srOd5xC4CSnwIX5STIdbJd13cpaad_b-FelA" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WC-Wagen Marty – Vermietung im Zürcher Oberland</title>
-  <meta name="description" content="Mobiler WC-Wagen zur Vermietung für Events, Feste und diverse Anlässe im Zürcher Oberland. Kontaktieren Sie Jörg Marty für flexible Lösungen.">
+  <title>WC-Wagen Marty – Vermietung für diverse Anlässe</title>
+  <meta name="description" content="Mobiler WC-Wagen zur Vermietung für Events, Feste und diverse weitere Anlässe. Kontaktieren Sie Jörg Marty für flexible Lösungen.">
   <meta name="keywords" content="WC-Wagen, Vermietung, mobile Toilette, Hütten, Marty, Event, WC, Zürich, Schweiz">
   <meta name="author" content="Jörg Marty">
+  <img src="logo.png" alt="Logo" width="200">
+  <meta property="og:title" content="WC-Wagen Marty – Vermietung für diverse Anlässe">
+  <meta property="og:description" content="Mobile WC-Wagen zur Vermietung für Events, Feste und diverse weitere Anlässe. Jetzt mieten!">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://wwv-marty.github.io/wcwagenvermietung-marty.github.io/">
+  <meta property="og:image" content="https://wwv-marty.github.io/wcwagenvermietung-marty.github.io/logo.png"> -->
   <style>
     body {
       margin: 0;
@@ -89,5 +95,6 @@
   </footer>
 </body>
 </html>
+
 
 
