--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:description" content="Mobile WC-Wagen zur Vermietung für Events, Feste und diverse weitere Anlässe. Jetzt mieten!">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://wwv-marty.github.io/wcwagenvermietung-marty.github.io/">
-  <meta property="og:image" content="https://wwv-marty.github.io/wcwagenvermietung-marty.github.io/logo.png"> -->
+  <meta property="og:image" content="https://wwv-marty.github.io/wcwagenvermietung-marty.github.io/logo.png">
   <style>
     body {
       margin: 0;
@@ -95,6 +95,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
