--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <main>
     <section>
       <h2>Willkommen bei WC-Wagen Marty</h2>
-      <p>Preisgünstige Vermietung eines modernen, mobilen Toilettenwagens – ideal für Anlässe aller Art im Zürcher Oberland und Umgebung.</p>
+      <p>Preisgünstige Vermietung eines modernen, mobilen Toilettenwagens – ideal für Anlässe aller Art in der Region Zimmerberg und Umgebung.</p>
       <p>Ob Hochzeit, Firmenfest, Ausstellung oder Geburtstagsfeier – unser WC-Wagen bietet saubere und komfortable Sanitärlösungen für bis zu 1000 Personen.</p>
     </section>
 
@@ -91,10 +91,11 @@
       📧 <a href="mailto:marty.wwv@gmail.com">marty.wwv@gmail.com</a> |
       📸 <a href="https://www.instagram.com/wc_wagen_marty" target="_blank">@wc_wagen_marty</a>
     </div>
-    <p>Region Zürich Oberland | © 2025 WC-Wagen Marty</p>
+    <p>Region Zimmerberg | © 2025 WC-Wagen Marty</p>
   </footer>
 </body>
 </html>
+
 
 
 
