--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WC-Wagen Marty – Vermietung für diverse Anlässe</title>
   <meta name="description" content="Mobiler WC-Wagen zur Vermietung für Events, Feste und diverse weitere Anlässe. Kontaktieren Sie Jörg Marty für flexible Lösungen.">
-  <meta name="keywords" content="WC-Wagen, Vermietung, mobile Toilette, Hütten, Marty, Event, WC, Zürich, Schweiz">
+  <meta name="keywords" content="WC-Wagen, Vermietung, mobile Toilette, Hütten, Marty, Event, WC, Zimmerberg, Zürich, Schweiz">
   <meta name="author" content="Jörg Marty">
   <img src="logo.png" alt="Logo" width="200">
   <meta property="og:title" content="WC-Wagen Marty – Vermietung für diverse Anlässe">
-  <meta property="og:description" content="Mobile WC-Wagen zur Vermietung für Events, Feste und diverse weitere Anlässe. Jetzt mieten!">
+  <meta property="og:description" content="Mobiler WC-Wagen zur Vermietung für Events, Feste und diverse weitere Anlässe. Jetzt mieten!">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://wwv-marty.github.io/wcwagenvermietung-marty.github.io/">
   <meta property="og:image" content="https://wwv-marty.github.io/wcwagenvermietung-marty.github.io/logo.png">
@@ -69,9 +69,9 @@
 
   <main>
     <section>
-      <h2>Willkommen bei WC-Wagen Marty</h2>
+      <h2>Herzlich willkommen bei WC-Wagen Marty</h2>
       <p>Preisgünstige Vermietung eines modernen, mobilen Toilettenwagens – ideal für Anlässe aller Art in der Region Zimmerberg und Umgebung.</p>
-      <p>Ob Hochzeit, Firmenfest, Ausstellung oder Geburtstagsfeier – unser WC-Wagen bietet saubere und komfortable Sanitärlösungen für bis zu 1000 Personen.</p>
+      <p>Ob Hochzeit, Firmenfest, Ausstellung oder Geburtstagsfeier – unser mobiler WC-Wagen bietet saubere und komfortable Sanitärlösungen für bis zu 1000 Personen.</p>
     </section>
 
     <section>
@@ -95,6 +95,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
