--- a/details.html
+++ b/details.html
@@ -66,19 +66,135 @@
       <a href="details.html">Details</a>
     </nav>
   </header>
+> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Technische Details – WC-Wagen Marty</title> <style> body { margin: 0; font-family: 'Segoe UI', sans-serif; background-color: #f9fcff; color: #222; } header { background-color: #cde7ff; padding: 1rem 2rem; display: flex; justify-content: space-between; align-items: center; } header h1 { margin: 0; color: #004a8f; font-size: 1.5rem; } nav a { color: #004a8f; text-decoration: none; margin-left: 1.5rem; font-weight: 600; } nav a:hover { text-decoration: underline; } main { padding: 2rem; max-width: 900px; margin: auto; } table { width: 100%; border-collapse: collapse; margin-top: 1rem; } td, th { border: 1px solid #aaccee; padding: 0.7rem; } th { background-color: #e8f4ff; text-align: left; } footer { background-color: #cde7ff; text-align: center; padding: 1rem; } .icons a { margin: 0 10px; text-decoration: none; color: #004a8f; font-weight: bold; } </style> </head> <body> <header> <h1>WC-Wagen Marty</h1> <nav> <a href="index.html">Home</a> <a href="bilder.html">Bilder</a> <a href="details.html">Details</a> </nav> </header> <main> <h2>Technische Daten & Ausstattung</h2> <p>Hier findest du alle wichtigen Angaben zum WC-Wagen:</p> <table> <tr><th>Kapazität</th><td>Bis zu 1000 Personen</td></tr> <tr><th>Bereiche</th><td>Herren & Damen getrennt</td></tr> <tr><th>Länge</th><td>ca. 5,5 m</td></tr> <tr><th>Breite</th><td>ca. 2,3 m</td></tr> <tr><th>Höhe</th><td>ca. 2,8 m</td></tr> <tr><th>Gewicht</th><td>ca. 1.8 t</td></tr> <tr><th>Ausstattung</th><td>Hebeanlage (Pumpe), Kurbelstützen, Reservematerial, Handyhalterungen</td></tr> </table> </main> <footer> <div class="icons"> 📞 <a href="tel:+41792268350">079 226 83 50</a> | 📧 <a href="mailto:marty.wwv@gmail.com">marty.wwv@gmail.com</a> | 📸 <a href="https://www.instagram.com/wc_wagen_marty" target="_blank">@wc_wagen_marty</a> </div> <p>Region Zürich Oberland | © 2025 WC-Wagen Marty</p> </footer> </body> </html> Kannst du mir dieses mit den Informationen so abändern, dass das Word-Dokuments korrekt hineinpasst?
+Natürlich, Anja! Hier ist deine überarbeitete details.html, die alle technischen Angaben, Ausstattung, Preise und Bedingungen aus dem Word-Dokument korrekt integriert:
+
+html
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Technische Details – WC-Wagen Marty</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f9fcff;
+      color: #222;
+    }
+    header {
+      background-color: #cde7ff;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    header h1 { margin: 0; color: #004a8f; font-size: 1.5rem; }
+    nav a {
+      color: #004a8f;
+      text-decoration: none;
+      margin-left: 1.5rem;
+      font-weight: 600;
+    }
+    nav a:hover { text-decoration: underline; }
+    main {
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
+    }
+    td, th {
+      border: 1px solid #aaccee;
+      padding: 0.7rem;
+    }
+    th {
+      background-color: #e8f4ff;
+      text-align: left;
+    }
+    footer {
+      background-color: #cde7ff;
+      text-align: center;
+      padding: 1rem;
+    }
+    .icons a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #004a8f;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>WC-Wagen Marty</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="bilder.html">Bilder</a>
+      <a href="details.html">Details</a>
+    </nav>
+  </header>
 
   <main>
-    <h2>Technische Daten & Ausstattung</h2>
-    <p>Hier findest du alle wichtigen Angaben zum WC-Wagen:</p>
+    <h2>Technische Angaben</h2>
     <table>
-      <tr><th>Kapazität</th><td>Bis zu 1000 Personen</td></tr>
-      <tr><th>Bereiche</th><td>Herren & Damen getrennt</td></tr>
-      <tr><th>Länge</th><td>ca. 5,5 m</td></tr>
-      <tr><th>Breite</th><td>ca. 2,3 m</td></tr>
-      <tr><th>Höhe</th><td>ca. 2,8 m</td></tr>
-      <tr><th>Gewicht</th><td>ca. 1.8 t</td></tr>
-      <tr><th>Ausstattung</th><td>Hebeanlage (Pumpe), Kurbelstützen, Reservematerial, Handyhalterungen</td></tr>
+      <tr><th>Typ</th><td>2-Achs-Anhänger</td></tr>
+      <tr><th>Gesamtlänge mit Deichsel</th><td>8.10 m</td></tr>
+      <tr><th>Breite mit Treppe</th><td>3.55 m</td></tr>
+      <tr><th>Gesamthöhe</th><td>3.25 m</td></tr>
+      <tr><th>Standplatz</th><td>ca. 5 m x 10 m</td></tr>
+      <tr><th>Elektrischer Anschluss</th><td>230 V</td></tr>
+      <tr><th>Gewicht</th><td>3'000 kg (ohne Treppen)</td></tr>
+      <tr><th>Absetzbar</th><td>Mit Stapler unter Aufsicht</td></tr>
+      <tr><th>Damenabteil</th><td>3 Toiletten, 1 Lavabo mit Spiegel</td></tr>
+      <tr><th>Herrenabteil</th><td>2 Toiletten, 1 Pissoir-Rinne, 1 Lavabo</td></tr>
     </table>
+
+    <h2>Ausrüstung</h2>
+    <ul>
+      <li>10 m Ablaufrohr NW 110 mm mit Bögen</li>
+      <li>Wasseranschluss ¾ Zoll (GEKA-Kupplung) mit 25 m Schlauch</li>
+      <li>WC-Papier und Handtücher (1 Satz gefüllt)</li>
+      <li>Seifen- und Handtuchspender aufgefüllt</li>
+    </ul>
+
+    <h2>Mietpreise</h2>
+    <table>
+      <tr><th>1. Tag</th><td>CHF 300.00</td></tr>
+      <tr><th>Zusätzliche Tage</th><td>CHF 75.00 / Tag</td></tr>
+      <tr><th>Einrichten der Anlage</th><td>CHF 50.00</td></tr>
+      <tr><th>Winterzuschlag (Heizung usw.)</th><td>CHF 100.00</td></tr>
+      <tr><th>Annullationskosten</th><td>CHF 200.00</td></tr>
+    </table>
+
+    <h2>Transportkosten</h2>
+    <p>CHF 150.00 für folgende Orte:</p>
+    <ul>
+      <li>Hütten, Schönenberg, Hirzel, Horgen, Wädenswil, Samstagern, Schindellegi</li>
+    </ul>
+    <p>Übrige Gemeinden: CHF 90.00 / h (Traktor)</p>
+
+    <h2>Transport durch Mieter</h2>
+    <ul>
+      <li>Zugfahrzeug mit Druckluftbremsanlage (Schweiz) und Rockingerkupplung erforderlich</li>
+      <li>Max. Anhängergewicht: 3.0 t</li>
+      <li>Traktor möglich, Zugfahrzeuge müssen "weiss" eingelöst sein</li>
+    </ul>
+
+    <h2>Reinigung</h2>
+    <ul>
+      <li>Reinigung und Unterhalt während der Mietdauer durch Mieter</li>
+      <li>WC-Wagen muss gereinigt zurückgegeben werden</li>
+      <li>Schlusskontrolle durch Vermieter: CHF 50.00 pauschal</li>
+      <li>Nachreinigung durch Vermieter: CHF 75.00 / h</li>
+    </ul>
+
+    <h2>Bauseits</h2>
+    <p>Der Auftraggeber ist verantwortlich für die korrekte Ableitung des Abwassers in die Kanalisation und muss allfällige Bewilligungen bei den zuständigen Stellen einholen.</p>
   </main>
 
   <footer>
@@ -87,7 +203,8 @@
       📧 <a href="mailto:marty.wwv@gmail.com">marty.wwv@gmail.com</a> |
       📸 <a href="https://www.instagram.com/wc_wagen_marty" target="_blank">@wc_wagen_marty</a>
     </div>
-    <p>Region Zürich Oberland | © 2025 WC-Wagen Marty</p>
+    <p>Region Zimmerberg | © 2025 WC-Wagen Marty</p>
   </footer>
 </body>
 </html>
+
