--- a/bilder.html
+++ b/bilder.html
@@ -82,7 +82,8 @@
       📧 <a href="mailto:marty.wwv@gmail.com">marty.wwv@gmail.com</a> |
       📸 <a href="https://www.instagram.com/wc_wagen_marty" target="_blank">@wc_wagen_marty</a>
     </div>
-    <p>Region Zürich Oberland | © 2025 WC-Wagen Marty</p>
+    <p>Region Zimmerberg | © 2025 WC-Wagen Marty</p>
   </footer>
 </body>
 </html>
+
